<PreferenceScreen
    android:title="@string/setting_title"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/encyclopedia"
        android:key="setting_title"
        >
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_etc"
        android:key="setting_title"
        >
        <ListPreference
            android:title="@string/pref_wikipedia_language_setting_title"
            android:entries="@array/language_key_arrays"
            android:entryValues="@array/language_value_arrays"
            android:key="wikipedia_language_setting"
            android:defaultValue="ko"
            android:summary="한국어"
            />
        <Preference
            android:title="@string/pref_wiki_sequence_title"
            android:key="wiki_sequence"
            >
            <intent android:action="android.provider.Settings.ACTION_LOCATION_SOURCE_SETTINGS"
                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
